# pennywise

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  app.config.ts  bun.lockb  components.json  drizzle.config.ts  example.env  package.json  pennywise.sln  pnpm-lock.yaml  prisma.config.ts  server.ts  svelte.config.js  tsconfig.json  vite.config.ts
api/: Dockerfile  Program.cs  api.csproj  api.http  appsettings.json
api/Data/: AppDbContext.cs  UlidConverter.cs
api/Migrations/: 20250313085347_init.Designer.cs  20250313085347_init.cs  20250317054224_default currency as usd.Designer.cs  20250317054224_default currency as usd.cs  20250408083202_add identity auth.Designer.cs  20250408083202_add identity auth.cs  AppDbContextModelSnapshot.cs
api/Model/: Account.cs  Transaction.cs  User.cs
api/Properties/: launchSettings.json
api/Service/: UserService.cs  WalletService.cs
api/Utils/: EnumFilter.cs
app/: app.css  client.tsx  global.d.ts  routeTree.gen.ts  router.tsx  ssr.tsx
app/components/: nav.module.css  nav.tsx  sidebar.module.css  sidebar.tsx  transaction-modal.module.css  transaction-modal.tsx  transaction-table.tsx
app/lib/: auth-client.ts  auth.ts
app/routes/: __root.tsx  index.tsx  (+2 more)
assets/: main.css
client/: Program.cs  _Imports.razor  client.csproj  index.html  package.json  pnpm-lock.yaml  vite.config.ts
drizzle/: 0000_init.sql  0001_boring_pride.sql
pages/: +Layout.tsx  app.css
prisma/: schema.prisma
server/: _app.ts  model.ts
src/: app.d.ts  app.tsx  hook.server.ts  icons.rs  lib.rs  main.rs  routeTree.gen.ts
utils/: get-title.ts
(+171 files in other folders)
