[package]
name = "pennywise"
version = "0.1.0"
authors = ["sudhanv09 <mystogun125@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pennywise"
path = "src/lib.rs"

[[bin]]
name = "pennywise"
path = "src/main.rs"

[dependencies]
cache-dir = "0.1.9"
chrono = "0.4.44"
dioxus = { version = "0.7.1", features = ["router"], optional = true }
rusqlite = { version = "0.38.0", features = ["bundled"] }

[features]
default = ["mobile"]
web = ["dep:dioxus", "dioxus/web"]
desktop = ["dep:dioxus", "dioxus/desktop"]
mobile = ["dep:dioxus", "dioxus/mobile"]

[profile.android-dev]
inherits = "dev"
